horizontal scrolling fix

--- a/content/src/main/content/jcr_root/etc/designs/cqsm/clientlibs/css/main.css
+++ b/content/src/main/content/jcr_root/etc/designs/cqsm/clientlibs/css/main.css
@@ -35,7 +35,7 @@
     font-size: 14px;
     margin: 10px;
     padding: 5px;
-    width: 75%;
+    width: 60%;
     height: 100%;
     border: 1px solid lightgray;
     background-color: white;
